// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11am - 1:38pm = 2:38											//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Michael Villar | 3/13/2014
-Game1.cs - GameInterface.cs - Mouse.cs - InputManger.cs (NEW)
-Time 10:30 pm - 1:16 am = 2:44
-Notes: Created an InputManager class. Able to add different events
in the GameInterface class with it. Also placed GameMouse within it.
Still need to clean it up and review design. 

XNAGameEngine | Hypo Klarich | 3/12/2014
-FpsManager.cs -Game1.cs -GameInterface.cs -Mouse.cs -Debug.cs
-Time 8:00 pm - 10:02 pm = 2:02
-Notes: You did a great job Mike, however I went through and hid a lot
of your code. I moved both the debugger and the FPS into the Gameinterface
as well as, completely seperated the FPS from the Debugger. Mouse got moved
to GameInterface as well. Its best to think of GameInterface as a "Global"
container where we hide global variables and objects to keep our main loop
as clean as possible.

XNAGameEngine | Michael Villar | 3/12/2014
- FpsManager.cs - Game1.cs - GameObject.cs - Mouse.cs (NEW)
- Time: 4:00 - 7:25 = 3:25
- Notes: Input the Mouse class. The mouse is using the Ship image
and it reacts with the position. However, the mouse can not have 
collision. Collision is dependent on the physics. Details in
Mouse Class.

XNAGameEngine | Jacqulyn Wong | 3/12/2014
- ChangeLog.txt
- Time: 12:49am - 12:53am = 0:04
- Notes: Am I able to just correct the spelling mistakes I see here?
	They make my eyes hurt. .. I did it anyway. I hope I got them all.

XNAGameEngine | Michael Villar | 3/12/2014								
 -(New) FpsManager.cs - Debug.cs		
 -Time: 1:30am - 3:05am = 1:35											
 -Notes: Added FpsManager.cs and FPS Notes. I commented quite a bit